--- a/frondend/package.json
+++ b/frondend/package.json
@@ -17,18 +17,26 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.9",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.7.0",
     "axios": "^1.7.7",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
-    "styled-components": "^6.1.13"
+    "react-use-cart": "^1.14.0",
+    "styled-components": "^6.1.13",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
