--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -2,22 +2,25 @@
   "development": {
     "username": "postgres",
     "password": "2128",
-    "database": "lensLux",
+    "database": "lensLux2",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "port" : "5433"
   },
   "test": {
     "username": "postgres",
     "password": "2128",
-    "database": "lensLux",
+    "database": "lensLux2",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "port" : "5433"
   },
   "production": {
     "username": "postgres",
     "password": "2128",
-    "database": "lensLux",
+    "database": "lensLux2",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "port" : "5433"
   }
 }
